# openat_secure

./: .cirrus.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: constants.rs  lib.rs  open.rs  openat2.rs  util.rs
tests/: test_dir.rs  test_dir_beneath.rs  test_dir_in_root.rs  test_hardlink.rs  test_list_dir.rs  test_metadata.rs  test_parent.rs  test_rename.rs  test_sub_ops.rs  test_xdev.rs
